// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FixContainer should render correctly 1`] = `
<div>
  <div
    class="w-full"
  />
</div>
`;

exports[`FluidContainer should render correctly 1`] = `
<div>
  <div
    class="mx-auto w-full max-w-[1232px] px-800 md:px-1200 min-[1232px]:px-general-none"
  />
</div>
`;
